--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.2",
     "swiper": "^8.2.2",
     "uuid": "^8.3.2",
